<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Parrot"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <EditText
        android:id="@+id/userPasswordEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmailEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/Login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPasswordEditText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/Register"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/forgotPasswordButton"
        app:layout_constraintTop_toTopOf="@id/forgotPasswordButton" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/Forgot_Password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>